--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>IE3 Prototype</title>
   <link rel="stylesheet" href="../static/styles.css">
+  <script lang="text/javascript" src="/static/aside.js" defer></script>
 </head>
 <body>
   {% include 'includes/aside.html' %}
