--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <body>
   {% include 'includes/aside.html' %}
   <main>
-    <h1>Some Company's Name</h1>
+    <h1>Crypto Currency Predictor</h1>
     {% include 'includes/graph.html' %}
   </main>
 </body>
